feat: adiciona visualização única do usuário
