# src/gen/models/GetCustomerTransactionDetailResponse.ts
@@ -1,0 +1,110 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Pontuaí
+ * The Pontuaí API experience :)
+ *
+ * The version of the OpenAPI document: 1.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+import type { TransactionResponse } from './TransactionResponse';
+import {
+    TransactionResponseFromJSON,
+    TransactionResponseFromJSONTyped,
+    TransactionResponseToJSON,
+    TransactionResponseToJSONTyped,
+} from './TransactionResponse';
+
+/**
+ * 
+ * @export
+ * @interface GetCustomerTransactionDetailResponse
+ */
+export interface GetCustomerTransactionDetailResponse {
+    /**
+     * List of transactions performed by the customer
+     * @type {Array<TransactionResponse>}
+     * @memberof GetCustomerTransactionDetailResponse
+     */
+    transactions: Array<TransactionResponse>;
+    /**
+     * Total points earned by the customer through input transactions
+     * @type {number}
+     * @memberof GetCustomerTransactionDetailResponse
+     */
+    earnedPoints: number;
+    /**
+     * Total points redeemed by the customer through output transactions
+     * @type {number}
+     * @memberof GetCustomerTransactionDetailResponse
+     */
+    redeemedPoints: number;
+    /**
+     * Total points that have expired
+     * @type {number}
+     * @memberof GetCustomerTransactionDetailResponse
+     */
+    expiredPoints: number;
+    /**
+     * Total points currently available for the customer
+     * @type {number}
+     * @memberof GetCustomerTransactionDetailResponse
+     */
+    avaliablePoints: number;
+}
+
+/**
+ * Check if a given object implements the GetCustomerTransactionDetailResponse interface.
+ */
+export function instanceOfGetCustomerTransactionDetailResponse(value: object): value is GetCustomerTransactionDetailResponse {
+    if (!('transactions' in value) || value['transactions'] === undefined) return false;
+    if (!('earnedPoints' in value) || value['earnedPoints'] === undefined) return false;
+    if (!('redeemedPoints' in value) || value['redeemedPoints'] === undefined) return false;
+    if (!('expiredPoints' in value) || value['expiredPoints'] === undefined) return false;
+    if (!('avaliablePoints' in value) || value['avaliablePoints'] === undefined) return false;
+    return true;
+}
+
+export function GetCustomerTransactionDetailResponseFromJSON(json: any): GetCustomerTransactionDetailResponse {
+    return GetCustomerTransactionDetailResponseFromJSONTyped(json, false);
+}
+
+export function GetCustomerTransactionDetailResponseFromJSONTyped(json: any, ignoreDiscriminator: boolean): GetCustomerTransactionDetailResponse {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'transactions': ((json['transactions'] as Array<any>).map(TransactionResponseFromJSON)),
+        'earnedPoints': json['earnedPoints'],
+        'redeemedPoints': json['redeemedPoints'],
+        'expiredPoints': json['expiredPoints'],
+        'avaliablePoints': json['avaliablePoints'],
+    };
+}
+
+export function GetCustomerTransactionDetailResponseToJSON(json: any): GetCustomerTransactionDetailResponse {
+    return GetCustomerTransactionDetailResponseToJSONTyped(json, false);
+}
+
+export function GetCustomerTransactionDetailResponseToJSONTyped(value?: GetCustomerTransactionDetailResponse | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'transactions': ((value['transactions'] as Array<any>).map(TransactionResponseToJSON)),
+        'earnedPoints': value['earnedPoints'],
+        'redeemedPoints': value['redeemedPoints'],
+        'expiredPoints': value['expiredPoints'],
+        'avaliablePoints': value['avaliablePoints'],
+    };
+}
+
